<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:padding="24dp"
        android:text="@string/india_covid_19_tracker"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rv_horizontal_scroll">

        <GridLayout
            android:id="@+id/home_gl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:columnCount="2"
            android:padding="8dp"
            android:rowCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/confirmed"
                    android:textAllCaps="false"
                    android:textColor="@color/confirmed"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_confirmed_delta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/confirmed"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/confirmed_dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/active"
                    android:textAllCaps="false"
                    android:textColor="@color/active"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_active_delta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/active"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/active_dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/recovered"
                    android:textAllCaps="false"
                    android:textColor="@color/recovered"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_recovered_delta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/recovered"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/recovered_dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/deceased"
                    android:textAllCaps="false"
                    android:textColor="@color/deceased"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_deceased_delta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/deceased"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_deceased"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/hyphen"
                    android:textAllCaps="true"
                    android:textColor="@color/deceased_dark"
                    android:textSize="20sp" />
            </LinearLayout>

        </GridLayout>
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/rv_horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintStart_toStartOf="parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/state_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>